# softwareProjekt

./: .gitignore  AUTHORS  GalFld.cabal  LICENSE  README.md  TODO  galFld.cabal  shell.nix
bash/: genHaddock.sh  initSandbox.sh  runBench.sh  runBenchBerlekamp.sh  runBenchDiv.sh  runBenchMult.sh  runBenchRabinVsBerle.sh  runExmp.sh  runProfiling.sh  runSpec.sh  runTest.sh
benchmarks/: Bench.hs  BerlekampBench.hs  DivBench.hs  HeavyBench.hs  MultBench.hs  RabinVsBerleBench.hs
calculation/: cPN.sh  cPNrel.sh
calculation/cPNout/: CalcPrimNubersRel_p=13_m=2.csv  CalcPrimNubersRel_p=17_m=2.csv  CalcPrimNubersRel_p=19_m=2.csv  CalcPrimNubersRel_p=23_m=2.csv  CalcPrimNubersRel_p=2_m=2.csv  CalcPrimNubersRel_p=2_m=3.csv  CalcPrimNubersRel_p=2_m=4.csv  CalcPrimNubersRel_p=2_m=5.csv  CalcPrimNubersRel_p=2_m=6.csv  CalcPrimNubersRel_p=3_m=5.csv  CalcPrimNubersRel_p=3_m=6.csv  CalcPrimNubers_p=13.csv  CalcPrimNubers_p=17.csv  CalcPrimNubers_p=19.csv  CalcPrimNubers_p=2.csv  CalcPrimNubers_p=23.csv  CalcPrimNubers_p=29.csv  CalcPrimNubers_p=31.csv  CalcPrimNubers_p=41.csv  CalcPrimNubers_p=47.csv  CalcPrimNubers_p=5.csv  CalcPrimNubers_p=7.csv  CalcPrimNubers_p=71.csv  CalcPrimNubers_p=73.csv  CalcPrimNubers_p=89.csv
examples/: CountPrimitiveNormal.hs  Example.lhs  ExamplePrimitiveNormal.hs  ExamplePrimitiveNormal.lhs  ExamplePrimitiveNormal2.hs  cPN.sh  cPNrel.sh
examples/cPNout/: CalcPrimNubersRel_p=2_m=2.csv  CalcPrimNubersRel_p=2_m=3.csv  CalcPrimNubersRel_p=2_m=4.csv  CalcPrimNubers_p=101.csv  CalcPrimNubers_p=11.csv  CalcPrimNubers_p=13.csv  CalcPrimNubers_p=17.csv  CalcPrimNubers_p=2.csv  CalcPrimNubers_p=29.csv  CalcPrimNubers_p=3.csv  CalcPrimNubers_p=31.csv  CalcPrimNubers_p=37.csv  CalcPrimNubers_p=41.csv  CalcPrimNubers_p=43.csv  CalcPrimNubers_p=47.csv  CalcPrimNubers_p=5.csv  CalcPrimNubers_p=53.csv  CalcPrimNubers_p=61.csv  CalcPrimNubers_p=67.csv  CalcPrimNubers_p=7.csv  CalcPrimNubers_p=71.csv  CalcPrimNubers_p=79.csv  CalcPrimNubers_p=83.csv  CalcPrimNubers_p=89.csv  CalcPrimNubers_p=97.csv
profiling/: AlgProfiling.hs
src/: AlgProfiling.hs  AlgSandbox.hs  Bench.hs  Example.lhs  ExamplePrimitiveNormal.hs  FFSandbox.hs  FFSandbox3.hs  GalFld.cabal  HSpecTests.hs  Main.hs  Main.lhs  MatrixSandbox.hs  PFSandbox.hs  PolySandbox.hs  Sandbox.hs  SerializeSandbox.hs  Spec.hs  SpecCommon.hs  runSpec.sh
src/GalFld/: Algorithmen.hs  Core.hs  GalFld.hs  More.hs  NumberTheory.hs  SpecialPolys.hs
src/GalFld/Algorithmen/: Berlekamp.hs  Factorizations.hs  Rabin.hs  SFreeFactorization.hs  TypeZeroFactorization.hs
src/GalFld/Core/: Factorization.hs  FiniteField.hs  FiniteFields.hs  Matrix.hs  NumberTheory.hs  Polynomials.hs  PrimeFields.hs  ShowTex.hs
src/GalFld/Core/Polynomials/: Conway.hs  FFT.hs  FFTTuple.hs
src/GalFld/More/: NumberTheory.hs  SpecialPolys.hs
src/GalFld/Sandbox/: AlgSandbox.hs  FFSandbox.hs  MatrixSandbox.hs  PFSandbox.hs  PolySandbox.hs  SandboxCommon.hs  SerializeSandbox.hs
src/GalFld/Tests/: AlgProfiling.hs  Bench.hs  HeavyBench.hs
src/Projekt/: Algorithmen.hs  Core.hs  Projekt.hs
src/Projekt/Algorithmen/: AlgorithmusR.hs  Berlekamp.hs  Factorizations.hs  QFreeFactorization.hs  Rabin.hs  SFreeFactorization.hs  TypeZeroFactorization.hs
src/Projekt/Algorithmen/Char0/: QFreeFactorization.hs
src/Projekt/Core/: AlgebraicTypes.hs  Factorization.hs  FiniteField.hs  FiniteFields.hs  LatexShow.hs  Matrix.hs  Polynomials.hs  PrimeFields.hs  ShowLatex.hs  ShowTex.hs
src/Projekt/Core/Polynomials/: Conway.hs  FFT.hs  FFTTuple.hs
src/Projekt/Data/FField/: PrimeField.hs
src/Projekt/Sandbox/: AlgSandbox.hs  FFSandbox.hs  MatrixSandbox.hs  PFSandbox.hs  PolySandbox.hs  SandboxCommon.hs  SerializeSandbox.hs
src/Projekt/Tests/: AlgProfiling.hs  Bench.hs  HeavyBench.hs  Spec.hs
src/Stolen/: Cache.hs
src/Test/: dump.txt  test  test.aux  test.hp  test.hs  test.ps
src/bash/: renderLatexSnipet.sh  runAlgSpec.sh  runBench.sh  runMain.sh  runProfiling.sh  runSpec.sh  setup.sh
test/: AlgTests.hs  FFTests.hs  MatrixTests.hs  PFTests.hs  PolyTests.hs  TestsCommon.hs
tex/: alg-berlekamp.tex  alg-quadratfrei.tex  alg-rabin.tex  alg.tex  anh-berechnung.tex  berechnet.tex  commands.sty  compile.sh  deptMap.tex  exmp.tex  github.tex  hask.tex  haskell.sty  impl-fact.tex  impl-gal.tex  impl-matrix.tex  impl-pol.tex  impl-weiteres.tex  impl.tex  main.bib  main.tex  mvPdf.sh  myClass.cls  qrcode.eps  schluss.tex  titel.tex
tex/CSVs/: CalcPrimNubersRel_p=2_m=2.csv  CalcPrimNubersRel_p=2_m=3.csv  CalcPrimNubersRel_p=2_m=4.csv  CalcPrimNubers_p=101.csv  CalcPrimNubers_p=11.csv  CalcPrimNubers_p=13.csv  CalcPrimNubers_p=17.csv  CalcPrimNubers_p=19.csv  CalcPrimNubers_p=2.csv  CalcPrimNubers_p=23.csv  CalcPrimNubers_p=29.csv  CalcPrimNubers_p=3.csv  CalcPrimNubers_p=31.csv  CalcPrimNubers_p=37.csv  CalcPrimNubers_p=41.csv  CalcPrimNubers_p=43.csv  CalcPrimNubers_p=47.csv  CalcPrimNubers_p=5.csv  CalcPrimNubers_p=53.csv  CalcPrimNubers_p=61.csv  CalcPrimNubers_p=67.csv  CalcPrimNubers_p=7.csv  CalcPrimNubers_p=71.csv  CalcPrimNubers_p=73.csv  CalcPrimNubers_p=79.csv  CalcPrimNubers_p=83.csv  CalcPrimNubers_p=89.csv  CalcPrimNubers_p=97.csv
tex/plots/: benchMult.eps
trunk/src/Projekt/: Core.hs
trunk/src/Projekt/Core/: FiniteFields.hs  Polynomials.hs  PrimeFields.hs
trunk/src/Projekt/Data/: FField.hs
