-- http://www.haskell.org/haskellwiki/How_to_write_a_Haskell_program
name:                galFld
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            An implementation of finite fields and arbitrary extensions together with some algorithms.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Stefan Hackenberg, Maximilian Huber
maintainer:          mail@maximilian-huber.de
-- copyright:
category:            Math
build-type:          Simple
extra-source-files:  README.md, src/Example.lhs, src/HSpecTests.hs
cabal-version:       >=1.10

library
  ghc-options:       -threaded -O2 -fllvm
  exposed-modules:   GalFld.GalFld,
                     GalFld.Algorithmen,
                     GalFld.Algorithmen.Berlekamp,
                     GalFld.Algorithmen.Factorizations,
                     GalFld.Algorithmen.Rabin,
                     GalFld.Algorithmen.SFreeFactorization,
                     GalFld.Core,
                     GalFld.Core.Factorization,
                     GalFld.Core.FiniteField,
                     GalFld.Core.FiniteFields,
                     GalFld.Core.Matrix,
                     GalFld.Core.Polynomials,
                     --GalFld.Core.Polynomials.Conway,
                     GalFld.Core.Polynomials.FFT,
                     GalFld.Core.Polynomials.FFTTuple,
                     GalFld.Core.PrimeFields,
                     GalFld.Core.ShowTex,
                     GalFld.Sandbox.AlgSandbox,
                     GalFld.Sandbox.FFSandbox,
                     GalFld.Sandbox.MatrixSandbox,
                     GalFld.Sandbox.PFSandbox,
                     GalFld.Sandbox.PolySandbox,
                     GalFld.Sandbox.SandboxCommon,
                     GalFld.Sandbox.SerializeSandbox
  -- other-modules:
  other-extensions:  QuasiQuotes, TemplateHaskell, CPP, BangPatterns
  build-depends:     base >=4.7 && <4.8,
                     binary >=0.7 && <0.8,
                     bytestring >=0.10 && <0.11,
                     parallel >=3.2 && <3.3,
                     template-haskell >=2.9 && <2.10,
                     process >=1.2 && <1.3,
                     array >=0.5 && <0.6,
                     monad-parallel >=0.7 && <0.8,
                     integer-gmp >=0.5 && <0.6,
                     hspec >=1.9 && <1.10,
                     random >=1.0 && <1.1
  hs-source-dirs:    src
  default-language:  Haskell2010

-- Test-Suite spec
--   type:       exitcode-stdio-1.0
Test-suite spec
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall -threaded -O2 -fllvm
  hs-source-dirs:    test
  Main-is:           HSpecTests.hs
  Build-Depends:     base,
                     GalFld
  default-language:  Haskell2010

Executable exp
  ghc-options:       -threaded -O2 -fllvm
  Main-is:           src/Example.lhs
  Build-Depends:     base,
                     binary >=0.7 && <0.8,
                     bytestring >=0.10 && <0.11,
                     parallel >=3.2 && <3.3,
                     GalFld
  default-language:  Haskell2010

-- Executable prof
--   ghc-options:       -threaded -O2 -fllvm
--   Main-is:           AlgProfiling.hs
--   hs-source-dirs:    src
--   Build-Depends:     base,
--                      binary >=0.7 && <0.8,
--                      bytestring >=0.10 && <0.11,
--                      parallel >=3.2 && <3.3
--   default-language:  Haskell2010
--   GHC-Prof-Options: -auto-all   

-- Run bench:
-- cabal configure --enable-benchmarks && cabal build && cabal bench
Benchmark bench
  type:              exitcode-stdio-1.0
  ghc-options:       -threaded -O2 -fllvm
                     -fmax-simplifier-iterations=10
                     -fdicts-cheap
                     -fspec-constr-count=6
  hs-source-dirs:    benchmarks
  Main-is:           Bench.hs
  Build-Depends:     base,
                     criterion >=0.8 && <0.9,
                     GalFld
  default-language:  Haskell2010

-- Benchmark: heavyBench
--   type:              exitcode-stdio-1.0
Executable heavyBench
  ghc-options:       -threaded -O2 -fllvm
  hs-source-dirs:    benchmarks src
  Main-is:           HeavyBench.hs
  Build-Depends:     base,
                     GalFld
  default-language:  Haskell2010
