-- http://www.haskell.org/haskellwiki/How_to_write_a_Haskell_program
name:                galFld
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            An implementation of finite fields and arbitrary
                     extensions together with some algorithms.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Stefan Hackenberg, Maximilian Huber
maintainer:          mail@maximilian-huber.de
-- copyright:
category:            Math
build-type:          Simple
extra-source-files:  README.md, src/Example.lhs
cabal-version:       >=1.10

library
  ghc-options:       -threaded -O2 -fllvm -rtsopts
--                     -fmax-simplifier-iterations=10
--                     -fdicts-cheap
--                     -fspec-constr-count=6
  exposed-modules:   GalFld.GalFld,
                     GalFld.Algorithmen,
                     GalFld.Algorithmen.Berlekamp,
                     GalFld.Algorithmen.Factorizations,
                     GalFld.Algorithmen.Rabin,
                     GalFld.Algorithmen.SFreeFactorization,
                     GalFld.Core,
                     GalFld.Core.Factorization,
                     GalFld.Core.FiniteField,
                     GalFld.Core.FiniteFields,
                     GalFld.Core.Matrix,
                     GalFld.Core.Polynomials,
                     --GalFld.Core.Polynomials.Conway,
                     GalFld.Core.Polynomials.FFT,
                     GalFld.Core.Polynomials.FFTTuple,
                     GalFld.Core.PrimeFields,
                     GalFld.Core.ShowTex,
                     GalFld.Sandbox.AlgSandbox,
                     GalFld.Sandbox.FFSandbox,
                     GalFld.Sandbox.MatrixSandbox,
                     GalFld.Sandbox.PFSandbox,
                     GalFld.Sandbox.PolySandbox,
                     GalFld.Sandbox.SandboxCommon,
                     GalFld.Sandbox.SerializeSandbox
  -- other-modules:
  other-extensions:  QuasiQuotes, TemplateHaskell, CPP, BangPatterns
  build-depends:     base >=4.7 && <4.8,
                     binary >=0.7 && <0.8,
                     bytestring >=0.10 && <0.11,
                     parallel >=3.2 && <3.3,
                     template-haskell >=2.9 && <2.10,
                     process >=1.2 && <1.3,
                     array >=0.5 && <0.6,
                     monad-parallel >=0.7 && <0.8,
                     integer-gmp >=0.5 && <0.6,
                     hspec >=1.9 && <1.10,
                     criterion >=0.8 && <0.9,
                     random >=1.0 && <1.1
  hs-source-dirs:    src
  default-language:  Haskell2010
  GHC-Prof-Options:  -auto-all


Test-suite spec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           HSpecTests.hs
  Build-Depends:     base,
                     galFld
  default-language:  Haskell2010

Executable exmp
  hs-source-dirs:    src
  Main-is:           Example.lhs
  Build-Depends:     base,
                     array >=0.5 && <0.6,
                     template-haskell >=2.9 && <2.10,
                     process >=1.2 && <1.3,
                     binary >=0.7 && <0.8,
                     bytestring >=0.10 && <0.11,
                     monad-parallel >=0.7 && <0.8,
                     parallel >=3.2 && <3.3
  default-language:  Haskell2010

Executable prof
  Main-is:           AlgProfiling.hs
  hs-source-dirs:    profiling
  Build-Depends:     base,
                     galFld
  default-language:  Haskell2010
  GHC-Prof-Options:  -auto-all

Benchmark bench
  type:              exitcode-stdio-1.0
  hs-source-dirs:    benchmarks
  Main-is:           Bench.hs
  Build-Depends:     base,
                     criterion >=0.8 && <0.9,
                     galFld
  default-language:  Haskell2010
