-- http://www.haskell.org/haskellwiki/How_to_write_a_Haskell_program
name:                galFld
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            An implementation of finite fields and arbitrary
                     extensions together with some algorithms.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Stefan Hackenberg, Maximilian Huber
maintainer:          mail@maximilian-huber.de
-- copyright:
category:            Math
build-type:          Simple
Bug-Reports:         https://github.com/maximilianhuber/softwareProjekt/issues
extra-source-files:  README.md,
                     --src/GalFld/Core/Polynomials/Conway.hs,
                     src/Example.lhs
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          git://github.com/maximilianhuber/softwareProjekt.git

library
  Exposed: True
  ghc-options:       -threaded -O2 -fllvm -rtsopts
--                     -fmax-simplifier-iterations=10
--                     -fdicts-cheap
--                     -fspec-constr-count=6
  exposed-modules:   GalFld.GalFld,
                     GalFld.More.SpecialPolys,
                     GalFld.Algorithmen,
                     GalFld.Algorithmen.Berlekamp,
                     GalFld.Algorithmen.Rabin,
                     GalFld.Algorithmen.SFreeFactorization,
                     GalFld.Core,
                     GalFld.Core.NumberTheory,
                     GalFld.Core.Factorization,
                     GalFld.Core.FiniteField,
                     GalFld.Core.FiniteFields,
                     GalFld.Core.Matrix,
                     GalFld.Core.Polynomials,
                     --GalFld.Core.Polynomials.Conway,
                     GalFld.Core.Polynomials.FFT,
                     GalFld.Core.Polynomials.FFTTuple,
                     GalFld.Core.PrimeFields,
                     GalFld.Core.ShowTex,
                     GalFld.Sandbox.AlgSandbox,
                     GalFld.Sandbox.FFSandbox,
                     GalFld.Sandbox.MatrixSandbox,
                     GalFld.Sandbox.PFSandbox,
                     GalFld.Sandbox.PolySandbox,
                     GalFld.Sandbox.SerializeSandbox
  -- other-modules:
  other-extensions:  QuasiQuotes, TemplateHaskell, CPP, BangPatterns
  build-depends:     base,
                     binary >=0.7 && <0.8,
                     bytestring >=0.10 && <0.11,
                     parallel >=3.2 && <3.3,
                     template-haskell >=2.9 && <2.10,
                     process >=1.2 && <1.3,
                     array >=0.5 && <0.6,
                     integer-gmp >=0.5 && <0.6
  hs-source-dirs:    src
  default-language:  Haskell2010

Test-suite PrimeFields
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           PFTests.hs
  Build-Depends:     base,
                     hspec >=1.9,
                     monad-parallel >=0.7,
                     random >=1.0 && <1.1,
                     galFld
  default-language:  Haskell2010

Test-suite FiniteFields
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           FFTests.hs
  Build-Depends:     base,
                     hspec >=1.9,
                     monad-parallel >=0.7,
                     random >=1.0 && <1.1,
                     galFld
  default-language:  Haskell2010

Test-suite Polynomials
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           PolyTests.hs
  Build-Depends:     base,
                     hspec >=1.9,
                     monad-parallel >=0.7,
                     random >=1.0 && <1.1,
                     galFld
  default-language:  Haskell2010

Test-suite Matrix
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           MatrixTests.hs
  Build-Depends:     base,
                     hspec >=1.9,
                     monad-parallel >=0.7,
                     random >=1.0 && <1.1,
                     galFld
  default-language:  Haskell2010

Test-suite Algorithmen
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           AlgTests.hs
  Build-Depends:     base,
                     hspec >=1.9,
                     monad-parallel >=0.7,
                     random >=1.0 && <1.1,
                     galFld
  default-language:  Haskell2010

Executable exmp
  hs-source-dirs:    examples
  ghc-options:       -threaded -O2 -fllvm -rtsopts
  Main-is:           Example.lhs
  Build-Depends:     galFld,
                     base,
                     array >=0.5 && <0.6,
                     template-haskell >=2.9 && <2.10,
                     process >=1.2 && <1.3,
                     binary >=0.7 && <0.8,
                     bytestring >=0.10 && <0.11,
                     parallel >=3.2 && <3.3,
                     directory
  default-language:  Haskell2010

Executable exmpPrimNorm
  hs-source-dirs:    examples
  ghc-options:       -threaded -O2 -fllvm -rtsopts
  Main-is:           ExamplePrimitiveNormal.lhs
  Build-Depends:     galFld,
                     base,
                     array >=0.5 && <0.6,
                     template-haskell >=2.9 && <2.10,
                     process >=1.2 && <1.3,
                     binary >=0.7 && <0.8,
                     bytestring >=0.10 && <0.11,
                     parallel >=3.2 && <3.3,
                     directory
  default-language:  Haskell2010

Benchmark bench
  type:              exitcode-stdio-1.0
  hs-source-dirs:    benchmarks
  Main-is:           Bench.hs
  Build-Depends:     base,
                     criterion >=0.8 && <0.9,
                     random,
                     galFld
  default-language:  Haskell2010

Benchmark benchMult
  type:              exitcode-stdio-1.0
  hs-source-dirs:    benchmarks
  Main-is:           MultBench.hs
  Build-Depends:     base,
                     criterion >=0.8 && <0.9,
                     random,
                     galFld
  default-language:  Haskell2010
